--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,11 +8,11 @@ services:
             - ./config/default.conf:/etc/nginx/conf.d/default.conf
             - ./helloworld-example:/usr/share/nginx/html
 
-    mdenet-tool-helloworld:
-        image: mdenet-tool-helloworld:latest
+    mdenet-tool-yamtl:
+        image: mdenet-tool-yamtl:latest
         ports:
             - "8500:80"
         build:
           context: .
-          dockerfile: static.helloworld/Dockerfile
+          dockerfile: static.yamtlgroovy/Dockerfile
 
