Added .class files to jar

--- a/static.yamtlgroovy/Dockerfile
+++ b/static.yamtlgroovy/Dockerfile
@@ -12,7 +12,7 @@ COPY services/pom.xml /usr/src/toolfunctions/
 
 WORKDIR /usr/src/toolfunctions
 
-RUN mvn clean install -Pyamtlgroovy
+RUN mvn clean install -Pyamtl_m2m_function
 
 # Get runtime dependencies 
 RUN mvn org.apache.maven.plugins:maven-dependency-plugin:3.6.0:get -Dartifact=com.google.cloud.functions:function-maven-plugin:0.9.5 && mvn org.apache.maven.plugins:maven-dependency-plugin:3.6.0:get -Dartifact=org.apache.maven.plugins:maven-deploy-plugin:2.7 
