--- a/services/com.mde-network.ep.toolfunctions.yamtl_m2m_function/pom.xml
+++ b/services/com.mde-network.ep.toolfunctions.yamtl_m2m_function/pom.xml
@@ -8,8 +8,6 @@
   </parent>
 
   <artifactId>com.mde-network.ep.toolfunctions.yamtl_m2m_function</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  
   <packaging>jar</packaging>
   
  	<repositories>	
@@ -37,22 +35,51 @@
 	            </goals>
 	          </execution>
 	        </executions>
+	         <configuration>
+		        <sources>
+		          <source>
+		            <directory>${project.basedir}/src/main/groovy</directory>
+		            <includes>
+		              <include>**/*.groovy</include>
+		            </includes>
+		          </source>
+		          <source>
+		            <directory>${project.basedir}/src/main/java</directory>
+		            <includes>
+		              <include>**/*.groovy</include>
+		            </includes>
+		          </source>
+		        </sources>
+		      </configuration>
 	      </plugin>
 	      <plugin>
 	        <groupId>org.apache.maven.plugins</groupId>
 	        <artifactId>maven-compiler-plugin</artifactId>
 	        <version>3.8.1</version>
+	        <configuration>
+                <source>17</source>
+                <target>17</target>
+            </configuration>
 	      </plugin>
 	      <plugin>
 	        <groupId>com.google.cloud.functions</groupId>
 	        <artifactId>function-maven-plugin</artifactId>
 	        <version>0.9.5</version>
 	         <configuration>
-	            <!--functionTarget>com.mdenetnetwork.ep. ... </functionTarget-->
+	            <functionTarget>com.mdenetnetwork.ep.toolfunctions.yamtl_m2m_function.RunYAMTL_m2m_groovy</functionTarget>
 	        </configuration>
 	      </plugin>
+	   <plugin>
+		    <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>3.3.0</version>
+         <configuration>
+	        <includes>
+	            <include>**/*.class</include>
+	        </includes>
+	    </configuration>
+      </plugin>
 	    </plugins>
-	    
 	  </build>
 	  
 	<dependencies>
