--- a/static.yamtlgroovy/Dockerfile
+++ b/static.yamtlgroovy/Dockerfile
@@ -15,7 +15,12 @@ WORKDIR /usr/src/toolfunctions
 RUN mvn clean install -Pyamtl_m2m_function
 
 # Get runtime dependencies 
-RUN mvn org.apache.maven.plugins:maven-dependency-plugin:3.6.0:get -Dartifact=com.google.cloud.functions:function-maven-plugin:0.9.5 && mvn org.apache.maven.plugins:maven-dependency-plugin:3.6.0:get -Dartifact=org.apache.maven.plugins:maven-deploy-plugin:2.7 
+# Due to https://issues.apache.org/jira/browse/MDEP-568, m-dependency-p
+# is not a practical solution for ensuring all dependencies are available.
+#
+# We use https://github.com/qaware/go-offline-maven-plugin instead.
+RUN mvn -B de.qaware.maven:go-offline-maven-plugin:1.2.8:resolve-dependencies -Pyamtl_m2m_function
+
 
 WORKDIR /usr/src/toolfunctions
 
@@ -62,12 +67,6 @@ COPY --from=toolstaticbuild /usr/src/mdenet-tool/dist /usr/share/nginx/html
 
 WORKDIR /toolservice
 
-
-# Due to https://issues.apache.org/jira/browse/MDEP-568, m-dependency-p
-# is not a practical solution for ensuring all dependencies are available.
-#
-# We use https://github.com/qaware/go-offline-maven-plugin instead.
-#RUN mvn -B de.qaware.maven:go-offline-maven-plugin:1.2.8:resolve-dependencies
 
 # Copy start script and make it executable
 ADD static.yamtlgroovy/start.sh /
