--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
         volumes:
             - ./config/nginx.conf:/etc/nginx/nginx.conf
             - ./config/default.conf:/etc/nginx/conf.d/default.conf
-            - ./helloworld-example:/usr/share/nginx/html
+            - ./activities:/usr/share/nginx/html
 
     mdenet-tool-yamtl:
         image: mdenet-tool-yamtl:latest
