--- a/services/pom.xml
+++ b/services/pom.xml
@@ -13,6 +13,10 @@
   <version>0.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
         
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+  </properties>
 
 
 
