Lighter images for Node layers

--- a/static.yamtlgroovy/Dockerfile
+++ b/static.yamtlgroovy/Dockerfile
@@ -34,7 +34,8 @@ WORKDIR /usr/src/toolfunctions
 
 
 
-FROM node:19-bullseye AS toolstaticbuild
+# FROM node:19-bullseye AS toolstaticbuild
+FROM node:19-alpine AS toolstaticbuild
 
 WORKDIR /usr/src/mdenet-tool
 
@@ -48,35 +49,64 @@ COPY static.yamtlgroovy .
 RUN npm install; npm run build; chmod -R 755 dist/
 
 
+# FROM nginx:1.24.0-bullseye AS toolservice
 
-FROM nginx:1.24.0-bullseye AS toolservice
+# # Needed to avoid prompts blocking the build process
+# ENV DEBIAN_FRONTEND=noninteractive
 
-# Needed to avoid prompts blocking the build process
-ENV DEBIAN_FRONTEND=noninteractive
+# # Needed for Cloud Build
+# ENV PORT=80
 
-# Needed for Cloud Build
+# # Install Python
+# RUN apt-get update \
+#     && apt-get install -y python3-minimal openjdk-17-jdk maven tini netcat \
+#     && rm -rf /var/lib/apt/lists/*
+
+# # Copy built tool and sources
+# COPY --from=toolfunctions /root/.m2 /root/.m2
+# COPY --from=toolfunctions /usr/src/toolfunctions /toolservice
+
+# # Copy files for webserver
+# COPY static.yamtlgroovy/nginx.conf.template /etc/nginx.conf.template
+
+# RUN rm -r /usr/share/nginx/html/*
+# COPY --from=toolstaticbuild /usr/src/mdenet-tool/dist /usr/share/nginx/html
+
+# WORKDIR /toolservice
+
+
+# # Copy start script and make it executable
+# ADD static.yamtlgroovy/start.sh /
+# RUN chmod +x /start.sh
+
+# ENTRYPOINT ["/usr/bin/tini", "--", "/start.sh"]
+
+# Use Alpine-based Nginx
+FROM nginx:1.24.0-alpine AS toolservice
+
+# Environment variables
 ENV PORT=80
 
-# Install Python
-RUN apt-get update \
-    && apt-get install -y python3-minimal openjdk-17-jdk maven tini netcat \
-    && rm -rf /var/lib/apt/lists/*
+# Install Python, OpenJDK, Maven, tini, and netcat
+RUN apk add --no-cache python3 openjdk17 maven tini netcat-openbsd
 
 # Copy built tool and sources
 COPY --from=toolfunctions /root/.m2 /root/.m2
 COPY --from=toolfunctions /usr/src/toolfunctions /toolservice
 
-# Copy files for webserver
+# Copy files for web server
 COPY static.yamtlgroovy/nginx.conf.template /etc/nginx.conf.template
 
+# Remove default HTML and copy new HTML
 RUN rm -r /usr/share/nginx/html/*
 COPY --from=toolstaticbuild /usr/src/mdenet-tool/dist /usr/share/nginx/html
 
+# Set working directory
 WORKDIR /toolservice
-
 
 # Copy start script and make it executable
 ADD static.yamtlgroovy/start.sh /
 RUN chmod +x /start.sh
 
-ENTRYPOINT ["/usr/bin/tini", "--", "/start.sh"]
+# Set the entry point
+ENTRYPOINT ["/sbin/tini", "--", "/start.sh"]
