--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 services:
-    # mdenet-test-activities:
-    #     image: "nginx:1.23"
-    #     ports:
-    #         - "8083:80"
-    #     volumes:
-    #         - ./config/nginx.conf:/etc/nginx/nginx.conf
-    #         - ./config/default.conf:/etc/nginx/conf.d/default.conf
-    #         - ./activities:/usr/share/nginx/html
+    mdenet-test-activities:
+        image: "nginx:1.23"
+        ports:
+            - "8083:80"
+        volumes:
+            - ./config/nginx.conf:/etc/nginx/nginx.conf
+            - ./config/default.conf:/etc/nginx/conf.d/default.conf
+            - ./activities:/usr/share/nginx/html
 
     mdenet-tool-yamtl:
         image: yamtl-m2m:latest
